--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/server.js",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f"
+    "docker:logs": "docker-compose logs -f",
+    "seed:users": "ts-node src/seeds/users.ts"
   },
   "keywords": [],
   "author": "",
