Ajout seed events

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
-    "seed:users": "ts-node src/seeds/users.ts"
+    "seed:users": "ts-node src/seeds/users.ts",
+    "seed:events": "ts-node src/seeds/events.ts",
+    "seed:all": "npm run seed:users && npm run seed:events"
   },
   "keywords": [],
   "author": "",
