--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,23 @@
 version: '3.8'
 services:
+  api:
+    build: .
+    container_name: modart-api
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    environment:
+      - NODE_ENV=development
+      - MONGODB_URI=mongodb://admin:password123@mongodb:27017/modart?authSource=admin
+    volumes:
+      - .:/app
+      - /app/node_modules
+    depends_on:
+      mongodb:
+        condition: service_started
+    networks:
+      - app-network
+
   mongodb:
     image: mongo:latest
     container_name: modart-mongodb
